# firefly

./: DOCS.md  README.md  limine.cfg  make_iso.sh  meson.build
include/boot/: boot.h  stivale2.h
include/format/: format.h
include/kfh/: stdint.h
include/klib/: meson.build  string.h
kernel/: kmain.cc  meson.build
lib/: meson.build
lib/format/: format.cc
lib/klib/: meson.build  string.cc
toolchain/: x86_64-elf-gcc.txt
